--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        : "anasmarwan"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/anas-marwan-ab-razak"
   orcid            : # "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
