--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # main links links
 main:
 
-  - title: "Blog Posts"
+  - title: "Blog"
     url: /year-archive/
 
-  - title: "Notes"
-    url: /notes/
+  - title: "Resources"
+    url: /resources/
     
   - title: "CV"
     url: /cv/
